--- a/MiniPrj/.classpath
+++ b/MiniPrj/.classpath
@@ -22,6 +22,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/webapp/lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-jdbc-5.1.12.RELEASE.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/cos-05Nov2002.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
